--- a/typescript-curso-1/tsconfig.json
+++ b/typescript-curso-1/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "outDir": "dist/js",
-    "target": "es6",
-    "noEmitOnError": true,
+    "outDir": "public/js",
     "noImplicitAny": true,
-    "moduleResolution": "node",
-    "allowJs": false,
-    "strict": true,
+    "module": "es6",
+    "target": "es5",
+    "jsx": "react",
+    "allowJs": true,
+    "moduleResolution": "node"
   },
   "include": ["app/**/*"]
 }
