--- a/typescript-curso-1/tsconfig.json
+++ b/typescript-curso-1/tsconfig.json
@@ -4,9 +4,14 @@
     "noImplicitAny": true,
     "module": "es6",
     "target": "es5",
-    "jsx": "react",
     "allowJs": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "baseUrl": "app/",
+    "paths": {
+      "@controllers/*": ["controllers/*"],
+      "@models/*": ["models/*"],
+      "@views/*": ["views/*"],
+    }
   },
   "include": ["app/**/*"]
 }
