--- a/typescript-curso-1/package.json
+++ b/typescript-curso-1/package.json
@@ -5,9 +5,11 @@
   "main": "public/js/app.js",
   "scripts": {
     "prestart": "yarn build",
+    "poststart": "yarn watch",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "build -w"
   },
   "author": "",
   "license": "ISC",
