--- a/typescript-curso-1/tsconfig.json
+++ b/typescript-curso-1/tsconfig.json
@@ -10,8 +10,11 @@
     "paths": {
       "@controllers/*": ["controllers/*"],
       "@models/*": ["models/*"],
-      "@views/*": ["views/*"],
+      "@views/*": ["views/*"]
     }
+  },
+  "tsc-alias": {
+    "resolveFullPaths": true
   },
   "include": ["app/**/*"]
 }
