--- a/typescript-curso-1/package.json
+++ b/typescript-curso-1/package.json
@@ -7,6 +7,7 @@
     "prestart": "yarn build",
     "poststart": "yarn watch",
     "build": "webpack --mode production",
+    "build:alias": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "start": "webpack-dev-server --mode development",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "build -w"
@@ -15,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "ts-loader": "^9.2.8",
+    "tsc-alias": "^1.6.4",
     "typescript": "^4.6.2",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
