--- a/typescript-curso-2/package.json
+++ b/typescript-curso-2/package.json
@@ -12,13 +12,17 @@
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "start:prod": "webpack-dev-server --mode production",
     "build:prod": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext .ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
     "concurrently": "^6.0.0",
     "connect-history-api-fallback": "^1.6.0",
+    "eslint": "^8.13.0",
     "http-server": "^14.1.0",
     "lite-server": "^2.6.1",
     "ts-loader": "^9.2.8",
