--- a/typescript-curso-2/tsconfig.json
+++ b/typescript-curso-2/tsconfig.json
@@ -8,7 +8,7 @@
     "noImplicitAny": true,
     "noEmitOnError": true,
     "removeComments": true,
-    "strictNullChecks": false,
+    "strictNullChecks": true,
     "allowJs": true,
     "paths": {
       "@controllers/*": ["controllers/*"],
