adicionando fonte curso 3

--- a/typescript-curso-3/tsconfig.json
+++ b/typescript-curso-3/tsconfig.json
@@ -10,11 +10,17 @@
     "removeComments": true,
     "strictNullChecks": true,
     "allowJs": true,
+    "experimentalDecorators": true,
+    "sourceMap": true,
     "paths": {
       "@controllers/*": ["controllers/*"],
       "@models/*": ["models/*"],
       "@views/*": ["views/*"],
-      "@enums/*": ["enums/*"]
+      "@enums/*": ["enums/*"],
+      "@decorators/*": ["decorators/*"],
+      "@services/*": ["services/*"],
+      "@utils/*": ["utils/*"],
+      "@interfaces/*": ["interfaces/*"],
     }
   },
   "tsc-alias": {
